--- a/plugins/CustomObjectRollupLogger/classes/RollupLogBatchPurger.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupLogBatchPurger.cls
@@ -36,13 +36,13 @@ global without sharing class RollupLogBatchPurger implements Database.Batchable<
   }
 
   public void finish(Database.BatchableContext bc) {
-    RollupLogger.Instance.log('RollupLogBatchPurger finishing up after having deleted ' + this.recordCount + ' rollup logs', LoggingLevel.DEBUG);
+    RollupLogger.Instance.log('RollupLogBatchPurger finishing up after having deleted ' + this.recordCount + ' rollup logs', System.LoggingLevel.DEBUG);
 
     String orphanedLogsQuery = 'SELECT Count() FROM RollupLog__c WHERE NumberOfLogEntries__c = 0 AND IsDeleted = false';
     if (Database.countQuery(orphanedLogsQuery) > 0 && this.hasDeletedOrphanedLogs == false) {
       orphanedLogsQuery = orphanedLogsQuery.replace('Count()', 'Id');
       this.hasDeletedOrphanedLogs = true;
-      RollupLogger.Instance.log('Deleting orphaned logs ...', LoggingLevel.DEBUG);
+      RollupLogger.Instance.log('Deleting orphaned logs ...', System.LoggingLevel.DEBUG);
       delete Database.query(orphanedLogsQuery);
     }
     RollupLogger.Instance.save();
