--- a/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
@@ -5,7 +5,7 @@ public without sharing class RollupLogEventHandler {
 
     for (RollupLogEvent__e logEvent : logEvents) {
       RollupLog__c rollupLog = new RollupLog__c(
-        ErrorWouldHaveBeenThrown__c = logEvent.LoggingLevel__c == LoggingLevel.ERROR.name(),
+        ErrorWouldHaveBeenThrown__c = logEvent.LoggingLevel__c == System.LoggingLevel.ERROR.name(),
         LoggedBy__c = Id.valueOf(logEvent.LoggedBy__c),
         TransactionId__c = logEvent.TransactionId__c
       );
