--- a/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
+++ b/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
@@ -13,7 +13,7 @@ public class RollupNebulaLoggerAdapter extends RollupLogger {
     Logger.saveLog();
   }
 
-  protected override void innerLog(String logString, Object logObject, LoggingLevel logLevel) {
+  protected override void innerLog(String logString, Object logObject, System.LoggingLevel logLevel) {
     logString = logString + '\n' + this.getLogStringFromObject(logObject);
     Logger.newEntry(logLevel, this.getBaseLoggingMessage() + logString);
   }
