--- a/extra-tests/classes/RollupTestUtils.cls
+++ b/extra-tests/classes/RollupTestUtils.cls
@@ -29,7 +29,7 @@ public class RollupTestUtils {
   public class DMLMock extends RollupSObjectUpdater {
     public List<SObject> Records = new List<SObject>();
     public override void doUpdate(List<SObject> recordsToUpdate) {
-      RollupLogger.Instance.log('mock received the following for update:', recordsToUpdate, LoggingLevel.DEBUG);
+      RollupLogger.Instance.log('mock received the following for update:', recordsToUpdate, System.LoggingLevel.DEBUG);
       this.Records = recordsToUpdate;
     }
   }
